crates/codegen/language/tests/src/fail/parsing/unrecognized_field/test.stderr
error: unexpected token
  --> src/fail/parsing/unrecognized_field/test.rs:17:13
   |
17 |             unrecognized_field = true
   |             ^^^^^^^^^^^^^^^^^^
